--- a/admin/website-angular/package.json
+++ b/admin/website-angular/package.json
@@ -54,17 +54,18 @@
 	},
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.5",
-		"@angular/animations": "^7.1.3",
-		"@angular/cdk": "^7.1.1",
-		"@angular/common": "^7.1.3",
-		"@angular/compiler": "^7.1.3",
-		"@angular/core": "^7.1.3",
-		"@angular/forms": "^7.1.3",
-		"@angular/http": "^7.1.3",
-		"@angular/platform-browser": "^7.1.3",
-		"@angular/platform-browser-dynamic": "^7.1.3",
-		"@angular/router": "^7.1.3",
+		"@angular/animations": "^7.1.4",
+		"@angular/cdk": "^7.2.0",
+		"@angular/common": "^7.1.4",
+		"@angular/compiler": "^7.1.4",
+		"@angular/core": "^7.1.4",
+		"@angular/forms": "^7.1.4",
+		"@angular/http": "^7.1.4",
+		"@angular/platform-browser": "^7.1.4",
+		"@angular/platform-browser-dynamic": "^7.1.4",
+		"@angular/router": "^7.1.4",
 		"@asymmetrik/ngx-leaflet": "^5.0.1",
+		"@fortawesome/fontawesome-free": "^5.6.3",
 		"@nebular/auth": "^3.0.1",
 		"@nebular/bootstrap": "^3.0.1",
 		"@nebular/security": "^3.0.1",
@@ -93,10 +94,11 @@
 		"ckeditor": "^4.11.1",
 		"classlist.js": "1.1.20150312",
 		"core-js": "^2.6.0",
-		"echarts": "^4.0.2",
+		"cryptiles": "^4.1.3",
+		"echarts": "^4.1.0",
+		"eva-icons": "^1.1.1",
 		"faker": "^4.1.0",
 		"fingerprintjs2": "^1.8.1",
-		"font-awesome": "^4.7.0",
 		"global": "^4.3.2",
 		"graphql": "^0.13.2",
 		"graphql-tag": "^2.9.2",
@@ -106,6 +108,7 @@
 		"is-url": "^1.2.4",
 		"jquery": "^3.3.1",
 		"leaflet": "^1.3.4",
+		"moment": "^2.23.0",
 		"nebular-icons": "1.1.0",
 		"ng-simple-slideshow": "^1.2.5",
 		"ng2-ckeditor": "^1.2.2",
@@ -116,7 +119,8 @@
 		"ng2-tree": "^2.0.0-rc.11",
 		"ngx-echarts": "^4.0.1",
 		"ngx-highlightjs": "^2.1.1",
-		"node-uuid": "^1.4.8",
+		"ngx-moment": "^3.3.0",
+		"node-sass": "^4.11.0",
 		"normalize.css": "^8.0.1",
 		"pace-js": "1.0.2",
 		"popper.js": "^1.14.3",
@@ -139,14 +143,15 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^0.11.3",
-		"@angular/compiler-cli": "^7.1.3",
-		"@angular/cli": "^7.1.3",
-		"@angular/language-service": "^7.1.3",
-		"@compodoc/compodoc": "^1.1.5",
+		"@angular/cli": "^7.1.4",
+		"@angular/compiler-cli": "^7.1.4",
+		"@angular/language-service": "^7.1.4",
+		"@compodoc/compodoc": "^1.1.7",
 		"@types/async": "^2.0.31",
 		"@types/d3-color": "^1.2.1",
 		"@types/faker": "^4.1.2",
 		"@types/googlemaps": "^3.30.16",
+		"@types/highlight.js": "^9.12.3",
 		"@types/jasmine": "^3.3.1",
 		"@types/jasminewd2": "^2.0.6",
 		"@types/leaflet": "^1.2.14",
@@ -156,7 +161,6 @@
 		"@types/socket.io-client": "^1.4.32",
 		"@types/stripe": "^6.0.4",
 		"@types/uuid": "^3.4.4",
-		"@types/highlight.js": "^9.12.3",
 		"codelyzer": "^4.5.0",
 		"conventional-changelog-cli": "^2.0.11",
 		"husky": "^1.2.0",
@@ -173,9 +177,9 @@
 		"rimraf": "^2.6.2",
 		"stylelint": "^9.9.0",
 		"ts-node": "^7.0.1",
-		"tslint": "^5.11.0",
+		"tslint": "^5.12.0",
 		"tslint-language-service": "^0.9.9",
-		"typescript": "3.1.3"
+		"typescript": "~3.1.6"
 	},
 	"engines": {
 		"node": ">=10.14.2",
