--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -43,26 +43,26 @@
 		"@nestjs/common": "^5.5.0",
 		"@nestjs/core": "^5.5.0",
 		"@nestjs/cqrs": "^5.1.1",
-		"@nestjs/graphql": "^3.0.0",
+		"@nestjs/graphql": "^5.5.0",
 		"@nestjs/microservices": "^5.5.0",
 		"@nestjs/passport": "^5.1.0",
 		"@nestjs/swagger": "^2.5.1",
 		"@nestjs/testing": "^5.5.0",
 		"@nestjs/websockets": "^5.5.0",
-		"apollo-server-express": "^1.2.0",
+		"apollo-server-express": "^2.3.1",
 		"axios": "^0.18.0",
-		"bcrypt": "^3.0.1",
-		"bluebird": "^3.5.1",
-		"body-parser": "^1.18.2",
+		"bcrypt": "^3.0.3",
+		"bluebird": "^3.5.3",
+		"body-parser": "^1.18.3",
 		"bunyan": "^1.8.12",
 		"bunyan-cloudwatch": "^2.2.0",
 		"bunyan-prettystream": "^0.1.3",
-		"cli-color": "^1.1.0",
+		"cli-color": "^1.4.0",
 		"concurix": "^1.1.2",
 		"connect": "^3.6.6",
 		"cookie-session": "^2.0.0-beta.3",
 		"core-decorators": "^0.20.0",
-		"cors": "^2.8.4",
+		"cors": "^2.8.5",
 		"cross-env": "^5.2.0",
 		"destroy": "^1.0.4",
 		"dotenv": "^6.2.0",
@@ -70,30 +70,31 @@
 		"errorhandler": "^1.5.0",
 		"etag": "^1.8.1",
 		"event-stream": "3.3.4",
-		"express": "^4.16.3",
+		"express": "^4.16.4",
 		"express-handlebars": "^3.0.0",
 		"faker": "^4.1.0",
-		"graphql": "^0.11.7",
-		"graphql-playground-middleware-express": "^1.7.1",
-		"graphql-subscriptions": "^0.5.6",
-		"graphql-tools": "^2.11.0",
-		"handlebars": "^4.0.11",
-		"image-size": "^0.6.2",
+		"graphql": "^14.0.2",
+		"graphql-playground-middleware-express": "^1.7.8",
+		"graphql-subscriptions": "^1.0.0",
+		"graphql-tools": "^4.0.3",
+		"handlebars": "^4.0.12",
+		"image-size": "^0.6.3",
 		"install": "^0.12.2",
 		"inversify": "^5.0.1",
 		"ipstack": "^0.1.1",
-		"jsonwebtoken": "^8.3.0",
-		"lodash": "^4.17.5",
+		"jsonwebtoken": "^8.4.0",
+		"lodash": "^4.17.11",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.1.0",
-		"moment": "^2.21.0",
+		"moment": "^2.23.0",
 		"mongodb": "^3.1.10",
-		"mongodb-memory-server": "^2.8.0",
-		"mongoose": "^5.4.0",
-		"morgan": "^1.9.0",
+		"mongodb-memory-server": "^2.9.1",
+		"mongoose": "^5.4.2",
+		"morgan": "^1.9.1",
 		"ms": "^2.1.1",
-		"node-uuid": "^1.4.8",
+		"node-sass": "^4.11.0",
+		"cryptiles": "^4.1.3",
 		"on-finished": "^2.3.0",
 		"passport": "^0.4.0",
 		"passport-facebook": "^2.1.1",
@@ -102,18 +103,18 @@
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"passport-url": "^1.0.4",
-		"pm2": "^3.2.3",
+		"pm2": "^3.2.4",
 		"reflect-metadata": "^0.1.12",
-		"request": "^2.83.0",
-		"request-ip": "^2.1.1",
+		"request": "^2.88.0",
+		"request-ip": "^2.1.3",
 		"request-promise": "^4.2.2",
 		"rxjs": "^6.3.3",
 		"rxjs-compat": "^6.3.3",
-		"serve-favicon": "^2.4.5",
+		"serve-favicon": "^2.5.0",
 		"socket.io": "~2.2.0",
 		"socket.io-client": "^2.2.0",
-		"source-map-support": "^0.5.3",
-		"stripe": "^6.12.1",
+		"source-map-support": "^0.5.9",
+		"stripe": "^6.20.0",
 		"subscriptions-transport-ws": "^0.9.15",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
@@ -121,72 +122,71 @@
 		"underscore.string": "^3.3.5",
 		"upath": "^1.1.0",
 		"uuid": "^3.3.2",
-		"validator": "^10.9.0",
+		"validator": "^10.10.0",
 		"ws": "^6.1.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^3.0.0",
-		"@types/bluebird": "^3.5.20",
-		"@types/body-parser": "^1.16.8",
-		"@types/bunyan": "^1.8.4",
+		"@types/bluebird": "^3.5.25",
+		"@types/body-parser": "^1.17.0",
+		"@types/bunyan": "^1.8.5",
 		"@types/core-decorators": "^0.20.0",
-		"@types/cors": "^2.8.3",
+		"@types/cors": "^2.8.4",
 		"@types/errorhandler": "^0.0.32",
-		"@types/express": "^4.11.1",
-		"@types/faker": "^4.1.2",
+		"@types/express": "^4.16.0",
+		"@types/faker": "^4.1.4",
 		"@types/form-data": "^2.2.1",
 		"@types/google-maps": "^3.2.0",
-		"@types/handlebars": "^4.0.36",
+		"@types/handlebars": "^4.0.40",
 		"@types/inversify": "^2.0.33",
 		"@types/jest": "^23.3.1",
 		"@types/jsonwebtoken": "^8.3.0",
-		"@types/kafka-node": "^2.0.6",
-		"@types/lodash": "^4.14.104",
+		"@types/kafka-node": "^2.0.7",
+		"@types/lodash": "^4.14.119",
 		"@types/method-override": "^0.0.31",
 		"@types/mkdirp": "^0.5.2",
 		"@types/moment": "^2.13.0",
-		"@types/mongodb": "^3.1.2",
-		"@types/mongoose": "^5.3.5",
-		"@types/node": "^10.12.15",
-		"@types/node-uuid": "^0.0.28",
-		"@types/passport": "^0.4.5",
+		"@types/mongodb": "^3.1.18",
+		"@types/mongoose": "^5.3.7",
+		"@types/node": "^10.12.18",
+		"@types/passport": "^1.0.0",
 		"@types/passport-jwt": "^3.0.1",
-		"@types/redis": "^2.8.6",
+		"@types/redis": "^2.8.10",
 		"@types/reflect-metadata": "^0.1.0",
-		"@types/request": "^2.47.0",
-		"@types/request-promise": "^4.1.41",
-		"@types/sinon": "^7.0.0",
+		"@types/request": "^2.48.1",
+		"@types/request-promise": "^4.1.42",
+		"@types/sinon": "^7.0.3",
 		"@types/socket.io": "^2.1.2",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/source-map-support": "^0.4.0",
-		"@types/stripe": "^6.0.4",
+		"@types/source-map-support": "^0.4.1",
+		"@types/stripe": "^6.19.1",
 		"@types/uuid": "^3.4.4",
 		"@types/ws": "^6.0.1",
-		"concurrently": "^4.0.1",
+		"concurrently": "^4.1.0",
 		"conventional-changelog": "^3.0.5",
-		"core-js": "^2.5.7",
+		"core-js": "^2.6.1",
 		"coveralls": "^3.0.2",
-		"husky": "^1.2.0",
-		"jest": "^23.5.0",
-		"lerna": "^3.4.0",
+		"husky": "^1.3.1",
+		"jest": "^23.6.0",
+		"lerna": "^3.8.5",
 		"nodemon": "^1.18.9",
 		"nyc": "^13.1.0",
-		"prettier": "^1.11.1",
+		"prettier": "^1.15.3",
 		"require-directory": "^2.1.1",
-		"supertest": "^3.0.0",
-		"ts-jest": "^23.10.2",
-		"ts-loader": "^5.2.1",
+		"supertest": "^3.3.0",
+		"ts-jest": "^23.10.5",
+		"ts-loader": "^5.3.3",
 		"ts-node": "^7.0.1",
-		"tslint": "^5.11.0",
-		"typedoc": "^0.13.0",
+		"tslint": "^5.12.0",
+		"typedoc": "^0.14.0",
 		"typemoq": "^2.1.0",
-		"typescript": "^2.9.2",
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2",
+		"webpack": "^4.28.3",
+		"webpack-cli": "^3.2.0",
 		"webpack-command": "^0.4.2",
 		"webpack-graphql-loader": "^1.0.0",
 		"webpack-node-externals": "^1.7.2",
-		"pretty-quick": "^1.8.0"
+		"pretty-quick": "^1.8.0",
+		"typescript": "~3.1.6"
 	},
 	"engines": {
 		"node": ">=10.14.2",
