--- a/package.json
+++ b/package.json
@@ -46,57 +46,58 @@
 	},
 	"resolutions": {},
 	"dependencies": {
-		"@angular/core": "^7.1.3",
+		"@angular/core": "^7.1.4",
 		"angular2-logger": "^0.7.0",
-		"rxjs": "6.3.3",
-		"rxjs-compat": "6.3.3",
-		"socket.io-client": "2.2.0",
-		"stripe": "^6.12.1",
+		"npm": "^6.5.0",
+		"rxjs": "^6.3.3",
+		"rxjs-compat": "^6.3.3",
+		"socket.io-client": "^2.2.0",
+		"stripe": "^6.20.0",
 		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
-		"@types/async": "^2.0.31",
-		"@types/d3-color": "1.2.1",
-		"@types/faker": "^4.1.2",
-		"@types/googlemaps": "3.30.16",
-		"@types/jasmine": "3.3.1",
-		"@types/jasminewd2": "2.0.6",
-		"@types/leaflet": "1.2.14",
-		"@types/mongodb": "^3.1.2",
-		"@types/mongoose": "^5.2.17",
-		"@types/node": "~10.12.15",
+		"@types/async": "^2.0.50",
+		"@types/d3-color": "^1.2.1",
+		"@types/faker": "^4.1.4",
+		"@types/googlemaps": "^3.30.16",
+		"@types/jasmine": "^3.3.5",
+		"@types/jasminewd2": "^2.0.6",
+		"@types/leaflet": "^1.2.14",
+		"@types/mongodb": "^3.1.18",
+		"@types/mongoose": "^5.3.7",
+		"@types/node": "^10.12.18",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^6.0.4",
+		"@types/stripe": "^6.19.1",
 		"@types/uuid": "^3.4.4",
-		"codelyzer": "^4.4.4",
-		"husky": "^1.2.0",
-		"jasmine-core": "~3.3.0",
-		"jasmine-spec-reporter": "4.2.1",
-		"karma": "^3.1.3",
+		"codelyzer": "^4.5.0",
+		"concurrently": "^4.1.0",
+		"husky": "^1.3.1",
+		"jasmine-core": "^3.3.0",
+		"jasmine-spec-reporter": "^4.2.1",
+		"karma": "^3.1.4",
 		"karma-chrome-launcher": "^2.2.0",
 		"karma-cli": "^2.0.0",
 		"karma-coverage-istanbul-reporter": "^2.0.4",
 		"karma-jasmine": "^2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.0",
-		"lerna": "^3.4.0",
-		"lerna-changelog": "^0.8.0",
+		"lerna": "^3.8.5",
+		"lerna-changelog": "^0.8.2",
+		"lighthouse": "^4.0.0-alpha.2-3.2.1",
 		"lint-staged": "^8.1.0",
 		"npm-check-updates": "^2.15.0",
 		"prettier": "^1.15.3",
 		"pretty-quick": "^1.8.0",
-		"tslint": "5.11.0",
+		"tslint": "^5.12.0",
 		"tslint-config-prettier": "^1.17.0",
-		"lighthouse": "^4.0.0-alpha.2-3.2.1",
-		"typescript": "~3.2.2"
+		"typescript": "^2.9.2"
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "yarn pretty-quick --staged"
+			"pre-commit": "pretty-quick --no-verify --staged"
 		}
 	},
 	"engines": {
-		"node": ">=8.9.0",
-		"npm": ">= 3.x",
+		"node": ">=10.14.2",
 		"yarn": ">=1.7.0"
 	}
 }
