--- a/shop/mobile-ionic/package.json
+++ b/shop/mobile-ionic/package.json
@@ -38,153 +38,179 @@
 		"e2e": "ng e2e",
 		"bundle-report": "webpack-bundle-analyzer www/stats.json",
 		"docs": "compodoc -p src/tsconfig.app.json -d docs",
-		"docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s"
+		"docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
+		"ionic:build:prod": "ionic build --prod --release",
+		"cordova:build": "ionic cordova build android",
+		"cordova:build:prod": "ionic cordova build android --prod --release",
+		"cordova:run:prod": "ionic cordova run android --prod --release",
+		"cordova:run:prod:device": "ionic cordova run android --prod --release --device"
 	},
 	"dependencies": {
-		"@angular/animations": "^6.1.2",
-		"@angular/common": "~6.1.1",
-		"@angular/core": "~6.1.1",
-		"@angular/forms": "~6.1.1",
-		"@angular/http": "~6.1.1",
-		"@angular/platform-browser": "~6.1.1",
-		"@angular/platform-browser-dynamic": "~6.1.1",
-		"@angular/pwa": "^0.11.0",
-		"@angular/router": "~6.1.1",
-		"@angular/service-worker": "^6.1.1",
-		"@ionic-native/call-number": "~5.0.0-beta.17",
-		"@ionic-native/core": "~5.0.0-beta.17",
-		"@ionic-native/device": "~5.0.0-beta.17",
-		"@ionic-native/dialogs": "~5.0.0-beta.17",
-		"@ionic-native/geolocation": "~5.0.0-beta.17",
-		"@ionic-native/globalization": "~5.0.0-beta.17",
-		"@ionic-native/google-analytics": "~5.0.0-beta.17",
-		"@ionic-native/google-maps": "~5.0.0-beta.6",
-		"@ionic-native/intercom": "~5.0.0-beta.17",
-		"@ionic-native/local-notifications": "~5.0.0-beta.17",
-		"@ionic-native/mixpanel": "~5.0.0-beta.17",
-		"@ionic-native/network": "~5.0.0-beta.17",
-		"@ionic-native/splash-screen": "~5.0.0-beta.17",
-		"@ionic-native/status-bar": "~5.0.0-beta.17",
-		"@ionic-native/unique-device-id": "~5.0.0-beta.17",
-		"@ionic-native/vibration": "~5.0.0-beta.17",
-		"@ionic/angular": "4.0.0-beta.17",
-		"@ionic/pro": "^2.0.3",
-		"@ionic/storage": "^2.1.3",
-		"@ngx-progressbar/core": "^5.2.0",
-		"@ngx-translate/core": "^10.0.2",
-		"@ngx-translate/http-loader": "^3.0.1",
-		"angular-cli-builders": "^2.1.2",
-		"angular-ionic-cli-builders": "^2.1.4",
+		"@angular-builders/custom-webpack": "7.2.0",
+		"@angular-builders/dev-server": "7.2.1",
+		"@angular/animations": "^7.2.3",
+		"@angular/common": "~7.2.3",
+		"@angular/core": "~7.2.3",
+		"@angular/forms": "~7.2.3",
+		"@angular/http": "~7.2.3",
+		"@angular/platform-browser": "~7.2.3",
+		"@angular/platform-browser-dynamic": "~7.2.3",
+		"@angular/pwa": "^0.13.0",
+		"@angular/router": "~7.2.3",
+		"@angular/service-worker": "^7.2.3",
+		"@ionic-native/barcode-scanner": "^5.0.0",
+		"@ionic-native/call-number": "~5.0.0",
+		"@ionic-native/core": "~5.0.0",
+		"@ionic-native/device": "~5.0.0",
+		"@ionic-native/dialogs": "~5.0.0",
+		"@ionic-native/geolocation": "~5.0.0",
+		"@ionic-native/globalization": "~5.0.0",
+		"@ionic-native/google-analytics": "~5.0.0",
+		"@ionic-native/google-maps": "~5.0.0-beta.26",
+		"@ionic-native/in-app-browser": "^5.0.0",
+		"@ionic-native/intercom": "~5.0.0",
+		"@ionic-native/local-notifications": "~5.0.0",
+		"@ionic-native/mixpanel": "~5.0.0",
+		"@ionic-native/network": "~5.0.0",
+		"@ionic-native/splash-screen": "~5.0.0",
+		"@ionic-native/status-bar": "~5.0.0",
+		"@ionic-native/unique-device-id": "~5.0.0",
+		"@ionic-native/vibration": "~5.0.0",
+		"@ionic/angular": "4.0.0",
+		"@ionic/pro": "^2.0.4",
+		"@ionic/storage": "^2.2.0",
+		"@ngx-progressbar/core": "^5.3.1",
+		"@ngx-translate/core": "^11.0.1",
+		"@ngx-translate/http-loader": "^4.0.0",
 		"angular2-logger": "^0.7.0",
-		"apollo-angular": "^1.1.2",
-		"apollo-angular-link-http": "^1.1.1",
-		"apollo-cache-inmemory": "^1.2.7",
-		"apollo-client": "^2.3.8",
-		"apollo-link-context": "^1.0.8",
-		"apollo-link-ws": "^1.0.8",
-		"bootstrap": "^4.1.3",
-		"cordova-android": "^7.1.1",
-		"cordova-browser": "5.0.3",
+		"apollo-angular": "^1.5.0",
+		"apollo-angular-link-http": "^1.4.0",
+		"apollo-cache-inmemory": "^1.4.2",
+		"apollo-client": "^2.4.12",
+		"apollo-link": "^1.2.8",
+		"apollo-link-context": "^1.0.14",
+		"apollo-link-ws": "^1.0.14",
+		"bootstrap": "^4.2.1",
+		"call-number": "~0.0.2",
+		"cordova-android": "^7.1.4",
+		"cordova-android-support-gradle-release": "^2.0.1",
+		"cordova-browser": "5.0.4",
 		"cordova-plugin-appavailability": "^0.4.2",
 		"cordova-plugin-device": "^2.0.2",
 		"cordova-plugin-dialogs": "^2.0.1",
 		"cordova-plugin-geolocation": "^4.0.1",
 		"cordova-plugin-globalization": "^1.11.0",
-		"cordova-plugin-google-analytics": "^1.8.3",
+		"cordova-plugin-google-analytics": "^1.8.6",
 		"cordova-plugin-inappbrowser": "^3.0.0",
-		"cordova-plugin-intercom": "^5.1.1",
-		"cordova-plugin-ionic-keyboard": "^2.1.2",
-		"cordova-plugin-ionic-webview": "^2.0.0",
-		"cordova-plugin-mixpanel": "^4.4.1",
+		"cordova-plugin-intercom": "^6.2.0",
+		"cordova-plugin-ionic-keyboard": "^2.1.3",
+		"cordova-plugin-ionic-webview": "^3.1.1",
+		"cordova-plugin-mixpanel": "^4.5.2",
 		"cordova-plugin-splashscreen": "^5.0.2",
 		"cordova-plugin-statusbar": "^2.4.2",
 		"cordova-plugin-uniquedeviceid": "^1.3.2",
 		"cordova-plugin-vibration": "^3.1.0",
 		"cordova-plugin-whitelist": "^1.3.3",
-		"core-js": "^2.5.3",
+		"core-js": "^2.6.3",
+		"cryptiles": "^4.1.3",
 		"font-awesome": "^4.7.0",
-		"graphql": "^0.13.2",
-		"graphql-tag": "^2.9.2",
-		"ionicons": "~4.2.5",
-		"jasmine": "^3.2.0",
-		"lodash": "^4.17.10",
+		"graphql": "^14.1.1",
+		"graphql-tag": "^2.10.1",
+		"ionicons": "~4.5.5",
+		"jasmine": "^3.3.1",
+		"jsbarcode": "4.0.0-alpha.5",
+		"lodash": "^4.17.11",
 		"mx.ferreyra.callnumber": "0.0.2",
-		"node-sass": "^4.9.2",
-		"node-uuid": "^1.4.8",
-		"reflect-metadata": "^0.1.12",
-		"rxjs": "^6.2.2",
-		"rxjs-compat": "^6.2.2",
-		"save": "^2.3.2",
-		"socket.io-client": "^2.1.1",
-		"stripe": "^6.4.0",
-		"subscriptions-transport-ws": "^0.9.14",
-		"swiper": "4.4.1",
+		"node-sass": "^4.11.0",
+		"phonegap-plugin-barcodescanner": "^8.0.1",
+		"qrcode": "^1.3.3",
+		"reflect-metadata": "^0.1.13",
+		"rxjs": "^6.4.0",
+		"rxjs-compat": "^6.4.0",
+		"sass-loader": "^7.1.0",
+		"save": "^2.3.3",
+		"socket.io-client": "^2.2.0",
+		"stripe": "^6.23.0",
+		"subscriptions-transport-ws": "^0.9.15",
+		"swiper": "4.4.6",
 		"tslib": "^1.9.3",
 		"uuid": "^3.3.2",
-		"zone.js": "^0.8.26"
+		"zone.js": "^0.8.29"
 	},
 	"devDependencies": {
-		"@angular-devkit/architect": "~0.7.2",
-		"@angular-devkit/build-angular": "~0.7.2",
-		"@angular-devkit/core": "~0.7.2",
-		"@angular-devkit/schematics": "~0.7.2",
-		"@angular/cli": "6.1.2",
-		"@angular/compiler": "~6.1.1",
-		"@angular/compiler-cli": "~6.1.1",
-		"@angular/language-service": "^6.1.1",
-		"@compodoc/compodoc": "^1.1.5",
-		"@ionic/app-scripts": "3.1.9",
-		"@ionic/lab": "^1.0.0",
-		"@ionic/ng-toolkit": "^1.0.8",
-		"@ionic/schematics-angular": "^1.0.6",
-		"@types/d3-color": "1.0.5",
-		"@types/googlemaps": "3.30.4",
-		"@types/jasmine": "^2.8.8",
-		"@types/jasminewd2": "~2.0.3",
-		"@types/leaflet": "1.2.3",
-		"@types/mongodb": "^3.0.15",
-		"@types/mongoose": "^5.2.17",
-		"@types/node": "~10.9.2",
+		"@angular-devkit/architect": "~0.13.0",
+		"@angular-devkit/build-angular": "~0.13.0",
+		"@angular-devkit/core": "~7.3.0",
+		"@angular-devkit/schematics": "^7.3.0",
+		"@angular/cli": "7.3.0",
+		"@angular/compiler": "~7.2.3",
+		"@angular/compiler-cli": "~7.2.3",
+		"@angular/language-service": "^7.2.3",
+		"@compodoc/compodoc": "^1.1.7",
+		"@ionic/angular-toolkit": "1.3.0",
+		"@ionic/app-scripts": "3.2.2",
+		"@ionic/lab": "^1.0.20",
+		"@ionic/ng-toolkit": "^1.1.0",
+		"@ionic/schematics-angular": "^1.0.7",
+		"@types/d3-color": "1.2.1",
+		"@types/googlemaps": "3.30.16",
+		"@types/graphql": "^14.0.5",
+		"@types/jasmine": "^3.3.8",
+		"@types/jasminewd2": "~2.0.6",
+		"@types/leaflet": "1.4.0",
+		"@types/mongodb": "^3.1.19",
+		"@types/mongoose": "^5.3.12",
+		"@types/node": "~10.12.21",
 		"@types/reflect-metadata": "^0.1.0",
 		"@types/socket.io-client": "^1.4.32",
-		"@types/stripe": "^5.0.19",
-		"@types/swiper": "4.2.1",
+		"@types/stripe": "^6.19.5",
+		"@types/swiper": "4.4.1",
 		"@types/uuid": "^3.4.4",
-		"codelyzer": "^4.4.4",
+		"codelyzer": "^4.5.0",
 		"cpr": "^3.0.1",
-		"husky": "^0.14.3",
-		"ionic": "^4.5.0",
-		"jasmine-core": "~2.99.1",
+		"husky": "^1.3.1",
+		"ionic": "^4.10.1",
+		"jasmine-core": "~3.3.0",
 		"jasmine-spec-reporter": "~4.2.1",
-		"karma": "^3.0.0",
+		"karma": "^4.0.0",
 		"karma-chrome-launcher": "~2.2.0",
-		"karma-coverage-istanbul-reporter": "~2.0.0",
-		"karma-jasmine": "~1.1.1",
-		"karma-jasmine-html-reporter": "^0.2.2",
-		"protractor": "~5.4.0",
-		"ts-node": "~7.0.0",
-		"tslint": "~5.11.0",
-		"typescript": "~2.9.2",
-		"webpack-bundle-analyzer": "^2.13.1"
+		"karma-coverage-istanbul-reporter": "~2.0.4",
+		"karma-jasmine": "~2.0.1",
+		"karma-jasmine-html-reporter": "^1.4.0",
+		"protractor": "~5.4.2",
+		"rxjs-tslint": "0.1.5",
+		"terser": "3.14.1",
+		"terser-webpack-plugin": "^1.2.1",
+		"ts-node": "~8.0.2",
+		"tslint": "~5.12.1",
+		"typescript": "~3.2.4",
+		"webpack-bundle-analyzer": "^3.0.3"
 	},
 	"cordova": {
 		"platforms": [
-			"android",
-			"browser"
+			"browser",
+			"android"
 		],
 		"plugins": {
 			"cordova-plugin-whitelist": {},
 			"cordova-plugin-inappbrowser": {},
 			"cordova-plugin-splashscreen": {},
 			"cordova-plugin-device": {},
-			"cordova-plugin-ionic-webview": {},
+			"cordova-plugin-ionic-webview": {
+				"ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+			},
+			"phonegap-plugin-barcodescanner": {
+				"ANDROID_SUPPORT_V4_VERSION": "27.+"
+			},
 			"cordova-plugin-ionic-keyboard": {},
 			"cordova-plugin-geolocation": {
 				"GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
 			},
 			"cordova-plugin-uniquedeviceid": {},
 			"cordova-plugin-intercom": {},
-			"cordova-plugin-google-analytics": {},
+			"cordova-plugin-google-analytics": {
+				"GMS_VERSION": "11.0.1"
+			},
 			"cordova-plugin-mixpanel": {
 				"PLAY_SERVICES_VERSION": "+"
 			},
@@ -192,9 +218,15 @@
 			"cordova-plugin-statusbar": {},
 			"cordova-plugin-vibration": {},
 			"cordova-plugin-globalization": {},
-			"mx.ferreyra.callnumber": {},
 			"call-number": {},
-			"cordova-plugin-appavailability": {}
+			"cordova-plugin-appavailability": {},
+			"cordova-android-support-gradle-release": {
+				"ANDROID_SUPPORT_VERSION": "27.+"
+			}
 		}
+	},
+	"engines": {
+		"node": ">=10.15.0",
+		"yarn": ">=1.13.0"
 	}
 }
