--- a/shop/mobile-ionic/angular.json
+++ b/shop/mobile-ionic/angular.json
@@ -69,7 +69,7 @@
 					}
 				},
 				"serve": {
-					"builder": "@angular-builders/dev-server:generic",
+					"builder": "@angular-builders/custom-webpack:dev-server",
 					"options": {
 						"browserTarget": "app:build"
 					},
