--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
 		"build:carrier": "yarn --cwd ./carrier/mobile-ionic run build",
 		"build": "yarn run build:server && yarn run build:admin && yarn run build:merchant && yarn run build:shopmobile && yarn run build:shopweb && yarn run build:carrier",
 		"tslint-check": "tslint-config-prettier-check ./tslint.json",
-		"count": "cross-env yarn cloc backend/api/src admin/website-angular/src shop/mobile-ionic/src shop/website-angular/src carrier/mobile-ionic/src merchant/tablet-ionic/src shared/core-angular shared/core --exclude-dir='node_modules,modules'"
+		"count": "cross-env yarn cloc backend/api/src admin/website-angular/src shop/mobile-ionic/src shop/website-angular/src carrier/mobile-ionic/src merchant/tablet-ionic/src shared/core-angular shared/core --exclude-dir='node_modules,modules'",
+		"snyk-protect": "snyk protect",
+		"prepare": "yarn run snyk-protect"
 	},
 	"resolutions": {},
 	"dependencies": {
@@ -113,6 +115,7 @@
 		"rxjs-tslint": "0.1.5",
 		"tslint": "^5.16.0",
 		"tslint-config-prettier": "^1.18.0",
+		"snyk": "^1.175.2",
 		"typescript": "~3.4.5"
 	},
 	"config": {
@@ -129,5 +132,6 @@
 	"engines": {
 		"node": ">=10.15.0",
 		"yarn": ">=1.13.0"
-	}
+	},
+	"snyk": true
 }
