--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,46 @@ defaults: &defaults
     working_directory: /tmp/workspace
 
 jobs:
+    build-monorepo-root:
+        <<: *defaults
+        working_directory: /tmp/workspace/monorepo-root
+        docker:
+            - image: circleci/node:10.15.0
+        steps:
+            - checkout
+            - run:
+                  name: 'Installing latest Yarn'
+                  command: |
+                      # remove default yarn
+                      sudo rm -rf $(dirname $(which yarn))/yarn*
+                      # download latest
+                      rm -rf ~/.yarn
+                      curl -o- -L https://yarnpkg.com/install.sh | bash
+                      echo 'export PATH="${PATH}:${HOME}/.yarn/bin:${HOME}/.config/yarn/global/node_modules/.bin"' >> $BASH_ENV
+            - run:
+                  name: 'Pull Submodules'
+                  command: |
+                      git submodule init
+                      git submodule update --remote
+            - restore_cache:
+                  name: Restore Yarn Package Cache
+                  keys:
+                      - yarn-packages-monorepo-root-{{ checksum "yarn.lock" }}
+            - run:
+                  name: Install Dependencies
+                  command: yarn install
+            - run:
+                  name: Run Bootstrap
+                  command: yarn bootstrap
+            - save_cache:
+                  name: Save Yarn Package Cache
+                  key: yarn-packages-monorepo-root-{{ checksum "yarn.lock" }}
+                  paths:
+                      - ~/.cache/yarn
+            - persist_to_workspace:
+                  root: /tmp/workspace/monorepo-root
+                  paths:
+                      - '*'
     build-backend-api:
         <<: *defaults
         working_directory: /tmp/workspace/backend/api
@@ -434,6 +474,7 @@ workflows:
     version: 2
     build_and_test:
         jobs:
+            - build-monorepo-root
             - build-backend-api
             - build-admin-website-angular
             - build-merchant-tablet-ionic
