--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -1,6 +1,20 @@
 FROM node:alpine
 
+RUN apk update
+
+RUN npm i -g npm
+
+RUN apk add libexecinfo libexecinfo-dev
+
+RUN apk --no-cache add --virtual builds-deps build-base \
+  snappy g++ snappy-dev gcc libgcc libstdc++ linux-headers autoconf automake make nasm python git && \
+  npm install --quiet node-gyp -g
+
+RUN npm config set python /usr/bin/python
+
 RUN npm install yarn -g
+
+RUN npm install pm2 -g --unsafe-perm
 
 # Import MongoDB public GPG key AND create a MongoDB list file
 ## RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
@@ -15,16 +29,22 @@ RUN mkdir -p /usr/src/app
 
 # Provides cached layer for node_modules and bower_components
 ADD package.json /tmp/package.json
+ADD .snyk /tmp/.snyk
+ADD yarn.lock /tmp/yarn.lock
 RUN cd /tmp/ && yarn install
 RUN cp -a /tmp/node_modules /usr/src/app/
 RUN cd /usr/src/app
 
 WORKDIR /usr/src/app
+
 # Bundle app source
 ADD . /usr/src/app
 
 RUN $(npm bin)/tsc
 
-EXPOSE 5501
+EXPOSE 5500 5501 5050 5555
 
-CMD [ "npm", "run", "prod" ]
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.5.0/wait /wait
+RUN chmod +x /wait
+
+CMD /wait && yarn run prod
