--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -48,29 +48,28 @@
 		"prepublish": "yarn run snyk-protect"
 	},
 	"dependencies": {
-		"@captemulation/get-parameter-names": "^1.2.0",
-		"@nestjs/common": "^6.1.1",
-		"@nestjs/core": "^6.1.1",
+		"@captemulation/get-parameter-names": "^1.3.0",
+		"@nestjs/common": "^6.3.2",
+		"@nestjs/core": "^6.3.2",
 		"@nestjs/cqrs": "^6.0.0",
-		"@nestjs/graphql": "^6.0.5",
-		"@nestjs/microservices": "^6.1.1",
-		"@nestjs/passport": "^6.0.0",
-		"@nestjs/platform-express": "^6.1.1",
-		"@nestjs/platform-socket.io": "^6.1.1",
+		"@nestjs/graphql": "^6.2.4",
+		"@nestjs/microservices": "^6.3.2",
+		"@nestjs/passport": "^6.1.0",
+		"@nestjs/platform-express": "^6.3.2",
+		"@nestjs/platform-socket.io": "^6.3.2",
 		"@nestjs/swagger": "^3.0.2",
-		"@nestjs/typeorm": "^6.1.1",
-		"@nestjs/websockets": "^6.3.1",
-		"apollo-server-express": "^2.6.1",
+		"@nestjs/typeorm": "^6.1.2",
+		"@nestjs/websockets": "^6.3.2",
+		"apollo-server-express": "^2.6.4",
 		"axios": "^0.19.0",
-		"bcrypt": "^3.0.4",
-		"bluebird": "^3.5.4",
+		"bluebird": "^3.5.5",
 		"body-parser": "^1.19.0",
 		"bunyan": "^1.8.12",
 		"bunyan-cloudwatch": "^2.2.0",
 		"bunyan-prettystream": "^0.1.3",
 		"cli-color": "^1.4.0",
 		"concurix": "^1.1.2",
-		"connect": "^3.6.6",
+		"connect": "^3.7.0",
 		"cookie-session": "^2.0.0-beta.3",
 		"core-decorators": "^0.20.0",
 		"cors": "^2.8.5",
@@ -78,35 +77,34 @@
 		"destroy": "^1.0.4",
 		"dotenv": "^8.0.0",
 		"envalid": "^5.0.0",
-		"errorhandler": "^1.5.0",
+		"errorhandler": "^1.5.1",
 		"etag": "^1.8.1",
 		"event-stream": "3.3.4",
-		"express": "^4.16.4",
-		"express-handlebars": "^3.0.2",
+		"express": "^4.17.1",
+		"express-handlebars": "^3.1.0",
 		"faker": "^4.1.0",
 		"fstream": "^1.0.12",
-		"graphql": "^14.2.1",
+		"graphql": "^14.3.1",
 		"graphql-playground-middleware-express": "^1.7.12",
 		"graphql-subscriptions": "^1.1.0",
-		"graphql-tools": "^4.0.4",
+		"graphql-tools": "^4.0.5",
 		"handlebars": "^4.1.2",
 		"image-size": "^0.7.4",
 		"install": "^0.12.2",
 		"inversify": "^5.0.1",
 		"ipstack": "^0.1.1",
 		"jsonwebtoken": "^8.5.1",
-		"kafka-node": "^4.1.3",
 		"lodash": "^4.17.11",
 		"method-override": "^3.0.0",
 		"mkdirp": "^0.5.1",
 		"module-alias": "^2.2.0",
 		"moment": "^2.24.0",
-		"mongodb": "^3.2.3",
-		"mongodb-memory-server": "^5.1.0",
-		"mongoose": "^5.5.13",
+		"mongodb": "^3.2.7",
+		"mongodb-memory-server": "^5.1.5",
+		"mongoose": "^5.6.0",
 		"morgan": "^1.9.1",
-		"ms": "^2.1.1",
-		"node-sass": "^4.11.0",
+		"ms": "^2.1.2",
+		"node-sass": "^4.12.0",
 		"on-finished": "^2.3.0",
 		"passport": "^0.4.0",
 		"passport-facebook": "^3.0.0",
@@ -116,101 +114,103 @@
 		"passport-local": "^1.0.0",
 		"passport-url": "^1.0.4",
 		"pem": "^1.14.2",
-		"pm2": "^3.5.0",
+		"pm2": "^3.5.1",
 		"redis": "^2.8.0",
 		"reflect-metadata": "^0.1.13",
 		"request": "^2.88.0",
 		"request-ip": "^2.1.3",
 		"request-promise": "^4.2.4",
-		"rxjs": "^6.5.1",
-		"rxjs-compat": "^6.5.1",
+		"rxjs": "^6.5.2",
+		"rxjs-compat": "^6.5.2",
 		"serve-favicon": "^2.5.0",
-		"snappy": "^6.1.2",
 		"socket.io": "^2.2.0",
 		"socket.io-client": "^2.2.0",
 		"source-map-support": "^0.5.12",
-		"stripe": "^7.0.0",
+		"stripe": "^7.2.0",
 		"subscriptions-transport-ws": "^0.9.16",
-		"swagger-ui-express": "^4.0.2",
+		"swagger-ui-express": "^4.0.6",
 		"symbol": "^0.3.1",
 		"symbol-observable": "^1.2.0",
-		"typeorm": "^0.2.16",
+		"typeorm": "^0.2.18",
 		"typescript-collections": "^1.3.2",
 		"underscore.string": "^3.3.5",
 		"upath": "^1.1.2",
 		"uuid": "^3.3.2",
 		"validator": "^11.0.0",
-		"ws": "^7.0.0"
+		"ws": "^7.0.1",
+		"bcrypt": "^3.0.6",
+		"snappy": "^6.2.3",
+		"kafka-node": "^4.1.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^8.0.0",
 		"@commitlint/config-conventional": "^8.0.0",
 		"@commitlint/config-lerna-scopes": "^8.0.0",
 		"@commitlint/travis-cli": "^8.0.0",
-		"@nestjs/testing": "^6.1.1",
+		"@nestjs/testing": "^6.3.2",
 		"@types/bcrypt": "^3.0.0",
-		"@types/bluebird": "^3.5.26",
+		"@types/bluebird": "^3.5.27",
 		"@types/body-parser": "^1.17.0",
 		"@types/bunyan": "^1.8.6",
 		"@types/core-decorators": "^0.20.0",
 		"@types/cors": "^2.8.5",
 		"@types/errorhandler": "^0.0.32",
-		"@types/express": "^4.16.1",
+		"@types/express": "^4.17.0",
 		"@types/faker": "^4.1.5",
 		"@types/form-data": "^2.2.1",
 		"@types/google-maps": "^3.2.1",
 		"@types/handlebars": "^4.1.0",
 		"@types/inversify": "^2.0.33",
-		"@types/jest": "^24.0.11",
+		"@types/jest": "^24.0.15",
 		"@types/jsonwebtoken": "^8.3.2",
 		"@types/kafka-node": "^2.0.8",
-		"@types/lodash": "^4.14.129",
+		"@types/lodash": "^4.14.134",
 		"@types/method-override": "^0.0.31",
 		"@types/mkdirp": "^0.5.2",
 		"@types/moment": "^2.13.0",
-		"@types/mongodb": "^3.1.25",
-		"@types/mongoose": "^5.3.26",
-		"@types/node": "^12.0.2",
+		"@types/mongodb": "^3.1.28",
+		"@types/mongoose": "^5.5.6",
+		"@types/node": "^12.0.10",
 		"@types/passport": "^1.0.0",
 		"@types/passport-jwt": "^3.0.1",
-		"@types/redis": "^2.8.12",
+		"@types/redis": "^2.8.13",
 		"@types/reflect-metadata": "^0.1.0",
 		"@types/request": "^2.48.1",
-		"@types/request-promise": "^4.1.43",
-		"@types/sinon": "^7.0.11",
+		"@types/request-promise": "^4.1.44",
+		"@types/sinon": "^7.0.13",
 		"@types/socket.io": "^2.1.2",
 		"@types/socket.io-client": "^1.4.32",
 		"@types/source-map-support": "^0.5.0",
-		"@types/stripe": "^6.25.17",
+		"@types/stripe": "^6.30.3",
 		"@types/uuid": "^3.4.4",
 		"@types/ws": "^6.0.1",
 		"concurrently": "^4.1.0",
-		"conventional-changelog": "^3.1.4",
-		"core-js": "^3.1.3",
-		"coveralls": "^3.0.3",
+		"conventional-changelog": "^3.1.8",
+		"core-js": "^3.1.4",
+		"coveralls": "^3.0.4",
 		"cross-env": "^5.2.0",
 		"cz-conventional-changelog": "^2.1.0",
-		"husky": "^2.4.0",
-		"jest": "^24.7.1",
-		"nodemon": "^1.18.11",
+		"husky": "^2.4.1",
+		"jest": "^24.8.0",
+		"nodemon": "^1.19.1",
 		"nyc": "^14.1.1",
-		"prettier": "^1.17.0",
+		"prettier": "^1.18.2",
 		"prettier-tslint": "^0.4.2",
-		"pretty-quick": "^1.10.0",
+		"pretty-quick": "^1.11.1",
 		"require-directory": "^2.1.1",
 		"rxjs-tslint": "0.1.5",
-		"snyk": "^1.173.1",
+		"snyk": "^1.180.1",
 		"supertest": "^4.0.2",
 		"ts-jest": "^24.0.2",
-		"ts-loader": "^5.4.3",
-		"ts-node": "^8.1.0",
-		"tslint": "^5.16.0",
+		"ts-loader": "^6.0.4",
+		"ts-node": "^8.3.0",
+		"tslint": "^5.18.0",
 		"typedoc": "^0.14.2",
 		"typemoq": "^2.1.0",
 		"typescript": "~3.4.5",
 		"wait-on": "^3.2.0",
-		"webpack": "^4.30.0",
-		"webpack-cli": "^3.3.1",
+		"webpack": "^4.35.0",
+		"webpack-cli": "^3.3.5",
 		"webpack-command": "^0.4.2",
 		"webpack-graphql-loader": "^1.0.2",
 		"webpack-node-externals": "^1.7.2"
