--- a/packages/shop-web-angular/package.json
+++ b/packages/shop-web-angular/package.json
@@ -164,11 +164,11 @@
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~13.0.4",
+		"@angular-devkit/build-angular": "^13.0.4",
 		"@angular-devkit/build-optimizer": "^0.1300.4",
 		"@angular/cli": "~13.0.4",
 		"@angular/compiler-cli": "~13.0.0",
-		"@ngtools/webpack": "^12.2.10",
+		"@ngtools/webpack": "^13.0.4",
 		"@types/googlemaps": "^3.43.3",
 		"@types/jasmine": "~3.9.1",
 		"@types/jasminewd2": "~2.0.10",
@@ -181,10 +181,10 @@
 		"karma-coverage-istanbul-reporter": "~3.0.3",
 		"karma-jasmine": "~4.0.1",
 		"karma-jasmine-html-reporter": "^1.7.0",
-		"protractor": "~7.0.0",
+		"protractor": "^7.0.0",
 		"rimraf": "^3.0.2",
 		"ts-node": "^10.4.0",
-		"tslint": "~5.20.1",
+		"tslint": "^6.1.3",
 		"typescript": "~4.4.3"
 	},
 	"engines": {
